--- a/exercicios/ex022 - trabalhando com imagens/fundo006.html
+++ b/exercicios/ex022 - trabalhando com imagens/fundo006.html
@@ -20,7 +20,7 @@
             width: 400px;
             padding: 10px;
             margin: auto;
-            border: 2px solid orange;
+            border: 5px solid rgb(255, 0, 0);
             border-radius: 10px;
         }
     </style>
@@ -28,7 +28,7 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, doloribus. Molestiae veniam velit autem, suscipit placeat iste molestias, repellat minima impedit odit id beatae nemo! Atque magni architecto impedit doloribus! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, id. Quos, sunt voluptas aliquid similique nisi voluptatem repudiandae eum velit blanditiis odit, nesciunt esse cum ratione. Sit quaerat amet ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Est neque, fugiat sequi temporibus eligendi maxime cumque. Sed rem officiis dicta voluptatibus quos inventore quas placeat, numquam eveniet nam commodi earum.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, doloribus. Molestiae veniam velit autem, suscipit placeat iste molestias, repellat minima impedit odit id beatae nemo! Atque magni architecto impedit doloribus! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, id. Quos, sunt voluptas aliquid similique nisi voluptatem repudiandae eum velit blanditiis odit, nesciunt esse cum ratione. Sit quaerat amet ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Est neque, fugiat sequi temporibus eligendi maxime cumque. Sed rem officiis dicta voluptatibus quos inventore quas placeat, numquam eveniet nam commodi earum.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, doloribus. Molestiae veniam velit autem, suscipit placeat iste molestias, repellat minima impedit odit id beatae nemo! Atque magni architecto impedit doloribus! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam, id. Quos, sunt voluptas aliquid similique nisi voluptatem repudiandae eum velit blanditiis odit, nesciunt esse cum ratione. Sit quaerat amet ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Est neque, fugiat sequi temporibus eligendi maxime cumque. Sed rem officiis dicta voluptatibus quos inventore quas placeat, numquam eveniet nam commodi earum.</p>
     </main>
     
 </body>
