--- a/exercicios/ex023/tabela006.html
+++ b/exercicios/ex023/tabela006.html
@@ -14,7 +14,7 @@
         caption {
             font-size: 1.3em;
             font-weight: bold;
-            padding: 20px;
+            padding: 10px;
         }
 
         th, td {
@@ -24,139 +24,144 @@
         tr:nth-child(even) {
             background-color: rgb(214, 214, 214);
         }
+
+        div#container {
+            overflow-x: auto;
+        }
     </style>
 </head>
 <body>
     <h1>Tabelas em telas pequenas</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti dignissimos tempore asperiores! Distinctio asperiores nihil exercitationem placeat modi iste, delectus facere enim suscipit itaque, ex repudiandae odio neque quia soluta.</p>
-    <table>
-        <caption>Tabelas responsivas</caption>
-        <thead>
-            <tr>
-                <th>Produto</th>
-                <th>Jan</th>
-                <th>Fev</th>
-                <th>Mar</th>
-                <th>Abr</th>
-                <th>Mai</th>
-                <th>Jun</th>
-                <th>Jul</th>
-                <th>Ago</th>
-                <th>Set</th>
-                <th>Out</th>
-                <th>Nov</th>
-                <th>Dez</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>TV 40"</td>
-                <td>01</td>
-                <td>04</td>
-                <td>07</td>
-                <td>12</td>
-                <td>12</td>
-                <td>08</td>
-                <td>05</td>
-                <td>09</td>
-                <td>10</td>
-                <td>04</td>
-                <td>02</td>
-                <td>11</td>
-            </tr>
-            <tr>
-                <td>Home</td>
-                <td>01</td>
-                <td>04</td>
-                <td>07</td>
-                <td>12</td>
-                <td>12</td>
-                <td>08</td>
-                <td>05</td>
-                <td>09</td>
-                <td>10</td>
-                <td>04</td>
-                <td>02</td>
-                <td>11</td>
-            </tr>
-            <tr>
-                <td>Samsung galaxy s21</td>
-                <td>01</td>
-                <td>04</td>
-                <td>07</td>
-                <td>12</td>
-                <td>12</td>
-                <td>08</td>
-                <td>05</td>
-                <td>09</td>
-                <td>10</td>
-                <td>04</td>
-                <td>02</td>
-                <td>11</td>
-            </tr>
-            <tr>
-                <td>iPad mini</td>
-                <td>01</td>
-                <td>04</td>
-                <td>07</td>
-                <td>12</td>
-                <td>12</td>
-                <td>08</td>
-                <td>05</td>
-                <td>09</td>
-                <td>10</td>
-                <td>04</td>
-                <td>02</td>
-                <td>11</td>
-            </tr>
-            <tr>
-                <td>Play Station 4</td>
-                <td>01</td>
-                <td>04</td>
-                <td>07</td>
-                <td>12</td>
-                <td>12</td>
-                <td>08</td>
-                <td>05</td>
-                <td>09</td>
-                <td>10</td>
-                <td>04</td>
-                <td>02</td>
-                <td>11</td>
-            </tr>
-            <tr>
-                <td>Lava Louças</td>
-                <td>01</td>
-                <td>04</td>
-                <td>07</td>
-                <td>12</td>
-                <td>12</td>
-                <td>08</td>
-                <td>05</td>
-                <td>09</td>
-                <td>10</td>
-                <td>04</td>
-                <td>02</td>
-                <td>11</td>
-            </tr>
-            <tr>
-                <td>Amazon Echo</td>
-                <td>01</td>
-                <td>04</td>
-                <td>07</td>
-                <td>12</td>
-                <td>12</td>
-                <td>08</td>
-                <td>05</td>
-                <td>09</td>
-                <td>10</td>
-                <td>04</td>
-                <td>02</td>
-                <td>11</td>
-            </tr>
-
-        </tbody>
-    </table>
+    <div id="container">
+        <table>
+            <caption>Tabelas responsivas.</caption>
+            <thead>
+                <tr>
+                    <th>Produto</th>
+                    <th>Jan</th>
+                    <th>Fev</th>
+                    <th>Mar</th>
+                    <th>Abr</th>
+                    <th>Mai</th>
+                    <th>Jun</th>
+                    <th>Jul</th>
+                    <th>Ago</th>
+                    <th>Set</th>
+                    <th>Out</th>
+                    <th>Nov</th>
+                    <th>Dez</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>TV 40"</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>12</td>
+                    <td>08</td>
+                    <td>05</td>
+                    <td>09</td>
+                    <td>10</td>
+                    <td>04</td>
+                    <td>02</td>
+                    <td>11</td>
+                </tr>
+                <tr>
+                    <td>Home</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>12</td>
+                    <td>08</td>
+                    <td>05</td>
+                    <td>09</td>
+                    <td>10</td>
+                    <td>04</td>
+                    <td>02</td>
+                    <td>11</td>
+                </tr>
+                <tr>
+                    <td>Samsung galaxy s21</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>12</td>
+                    <td>08</td>
+                    <td>05</td>
+                    <td>09</td>
+                    <td>10</td>
+                    <td>04</td>
+                    <td>02</td>
+                    <td>11</td>
+                </tr>
+                <tr>
+                    <td>iPad mini</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>12</td>
+                    <td>08</td>
+                    <td>05</td>
+                    <td>09</td>
+                    <td>10</td>
+                    <td>04</td>
+                    <td>02</td>
+                    <td>11</td>
+                </tr>
+                <tr>
+                    <td>Play Station 4</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>12</td>
+                    <td>08</td>
+                    <td>05</td>
+                    <td>09</td>
+                    <td>10</td>
+                    <td>04</td>
+                    <td>02</td>
+                    <td>11</td>
+                </tr>
+                <tr>
+                    <td>Lava Louças</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>12</td>
+                    <td>08</td>
+                    <td>05</td>
+                    <td>09</td>
+                    <td>10</td>
+                    <td>04</td>
+                    <td>02</td>
+                    <td>11</td>
+                </tr>
+                <tr>
+                    <td>Amazon Echo</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>12</td>
+                    <td>12</td>
+                    <td>08</td>
+                    <td>05</td>
+                    <td>09</td>
+                    <td>10</td>
+                    <td>04</td>
+                    <td>02</td>
+                    <td>11</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     
 </body>
 </html>
