--- a/exercicios/ex023/tabela004.html
+++ b/exercicios/ex023/tabela004.html
@@ -18,7 +18,7 @@
         }
 
         th,td {
-            border: 1px solid black;
+            border: 1px solid rgb(0, 0, 0);
             padding: 5px;
         }
         
