--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESTUDOS DE IFRAME</title>
+    <style>
+        iframe {
+            width: 500px;
+            height: 500px;
+            border: 2px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de um iframe</h1>
-    <p>Acessando o site do <a href="https://www.cursoemvideo.com" target="_blank">curso em video</a> para aprender a programar.</p>
+    <p>Acessando o site do 
+        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>        
+        para aprender a programar.</p>
+        <!--Por padrão o iframe tem 300 x 150 px
+        
+        - Caso queira, pode-se criar uma configuração em CSS para padronizar altura, largura, borda...etc dos iframe inseridos-->
+
+        <p>O repositorio do 
+            <iframe src="https://github.com/fernandoferrante" frameborder="0"></iframe> também é muito bacana.</p>
+
+            <p>teste de iframe 
+                <iframe src="https://www.globo.com" frameborder="0"></iframe> também é muito bacana.</p>
     
 </body>
 </html>
