--- a/exercicios/ex026/mq005/inde.html
+++ b/exercicios/ex026/mq005/inde.html
@@ -7,8 +7,9 @@
     <title>Media Query</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> <!--copiado  link da pagina do google icon e colado aqui-->
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/media-query.css">
 </head>
-<body>
+<body onresize= "mudouTamanho()"> <!--comando JavaScrip para ajustar o menu ao redimensionar a largura da tela-->
     <header>
         <h1>Meu site</h1>
         <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span> <!--copiado o link da pagina google icons e colado aqui.. o nome do icone pode ser alterado.. no caso substituir o menu por um outro icone disponivel na pagina do google
@@ -36,6 +37,15 @@
         </article>
     </main>
     <script>
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style.display = "block"
+            } else {
+                itens.style.display = "none"
+            }
+            /**/
+        }
+
         function clickMenu() {
             if (itens.style.display == 'block') {
                 itens.style.display = 'none'
